--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/svelte": "^5.6.0",
     "@iconify-json/ri": "^1.1.21",
     "@rive-app/canvas": "^2.19.3",
+    "@vercel/analytics": "^1.3.1",
     "astro": "^4.11.5",
     "astro-icon": "^1.1.0",
     "astro-robots-txt": "^1.0.0",
