--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "postinstall": "pnpm install"
   },
   "dependencies": {
     "@astrojs/netlify": "^5.4.0",
@@ -44,3 +45,4 @@
     "unocss": "^0.61.3"
   }
 }
+
