--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/solid-js": "^4.4.0",
     "@astrojs/svelte": "^5.6.0",
+    "@astrojs/vercel": "^3.1.1",
+    "@astrojs/vercel/serverless": "^1.0.0",
     "@iconify-json/ri": "^1.1.21",
     "@rive-app/canvas": "^2.19.3",
     "@vercel/analytics": "^1.3.1",
@@ -29,6 +31,7 @@
     "mdast-util-to-string": "^4.0.0",
     "motion": "^10.18.0",
     "reading-time": "^1.5.0",
+    "serverless": "link:@astrojs/vercel/serverless",
     "solid-js": "^1.8.18",
     "svelte": "^4.2.18"
   },
@@ -45,4 +48,3 @@
     "unocss": "^0.61.3"
   }
 }
-
