--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "postinstall": "pnpm install"
+    "postinstall": "pnpm install",
+    "vercel-build": "astro build"
   },
   "dependencies": {
     "@astrojs/netlify": "^5.4.0",
@@ -16,7 +17,6 @@
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/solid-js": "^4.4.0",
     "@astrojs/svelte": "^5.6.0",
-    "@astrojs/vercel": "^3.1.1",
     "@astrojs/vercel/serverless": "^1.0.0",
     "@iconify-json/ri": "^1.1.21",
     "@rive-app/canvas": "^2.19.3",
